--- a/css/styles.css
+++ b/css/styles.css
@@ -1,2 +1,26 @@
 body{
+    background-color: #fff;
+    color: #757575;
 }
+
+ul{
+    list-style: none;
+}
+
+.site-nav .link{
+    color: #212121;
+}
+
+.site-nav .link:hover,
+.site-nav .link:focus{
+    color: #2196F3;
+}
+
+.section-title{
+    color: #212121;
+}
+
+/* цвет основного текста #757575 */
+/* цвет вторичного текста #212121 */
+/* белый текст #FFFFFF */
+/* акцент #2196F3 */
