--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+:root{
+    --primary-text-color: #212121
+    --title-text-color: #757575
+}
+
 body{
     background-color: #fff;
     color: #757575;
