--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,13 @@
 :root{
-    --primary-text-color: #212121
-    --title-text-color: #757575
+    --primary-text-color: #757575;
+    --title-text-color: #212121;
+    --accent-color: #2196F3;
+    --primary-bg-color: #FFFFFF;
 }
 
 body{
-    background-color: #fff;
-    color: #757575;
+    background-color: var(--primary-bg-color);
+    color: var(--primary-text-color);
 }
 
 ul{
@@ -13,16 +15,36 @@ ul{
 }
 
 .site-nav .link{
-    color: #212121;
+    color: var(--title-text-color);
 }
 
 .site-nav .link:hover,
 .site-nav .link:focus{
-    color: #2196F3;
+    color: var(--accent-color);
+}
+
+.site-nav .link.current{
+    color: var(--accent-color);
 }
 
 .section-title{
-    color: #212121;
+    color: var(--title-text-color);
+}
+
+.button{
+    background-color: var(--accent-color);
+    color: var(--primary-bg-color);
+
+    font-size: 24px;
+    padding: 12px 24px;
+    display: inline-block;
+    border: 1px solid black;
+}
+
+.button .primary{
+    color: var(--primary-bg-color);
+    background-color: var(--accent-color);
+    border-color: transparent;
 }
 
 /* цвет основного текста #757575 */
