--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,18 @@ ul{
     color: var(--primary-bg-color);
     background-color: var(--accent-color);
     border-color: transparent;
+
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+}
+
+.hero-title{
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 60px
+    display: inline-block;
+    text-align: center;
 }
 
 /* цвет основного текста #757575 */
